--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,186 @@
-fastapi
-uvicorn
-python-dotenv
-supabase
-jinja2
-httpx
-openai
+acres==0.5.0
+aiocache==0.12.3
+aiofiles==25.1.0
+aiosmtplib==4.0.2
+annotated-types==0.7.0
+anyio==4.11.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+asgiref==3.10.0
+attrs==25.4.0
+Authlib==1.6.4
+av==15.1.0
+backoff==2.2.1
+bcrypt==5.0.0
+beautifulsoup4==4.14.2
+build==1.3.0
+cachetools==5.3.3
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.3
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+ci-info==0.3.0
+click==8.2.1
+colorama==0.4.6
+coloredlogs==15.0.1
+configobj==5.0.9
+configparser==7.2.0
+cryptography==46.0.1
+ctranslate2==4.6.0
+decorator==5.2.1
+defusedxml==0.7.1
+deprecation==2.1.0
+distro==1.9.0
+dnspython==2.8.0
+durationpy==0.10
+email-validator==2.3.0
+etelemetry==0.3.1
+faiss-cpu==1.12.0
+fastapi==0.116.1
+faster-whisper==1.2.0
+ffmpeg-python==0.2.0
+filelock==3.19.1
+flatbuffers==25.2.10
+fsspec==2025.9.0
+future==1.0.0
+google-auth==2.41.1
+googleapis-common-protos==1.71.0
+greenlet==3.2.4
+grpcio==1.76.0
+h11==0.16.0
+h2==4.3.0
+hf-xet==1.1.9
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.7.1
+httpx==0.26.0
+huggingface-hub==0.34.4
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.11
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.11.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kubernetes==34.1.0
+looseversion==1.3.0
+lxml==6.0.2
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mmh3==5.2.0
+moviepy==2.2.1
+mpmath==1.3.0
+multidict==6.7.0
+networkx==3.5
+nibabel==5.3.2
+nipype==1.10.0
+numpy==2.3.2
+oauthlib==3.3.1
+onnxruntime==1.22.1
+openai==2.7.1
+opentelemetry-api==1.38.0
+opentelemetry-exporter-otlp-proto-common==1.38.0
+opentelemetry-exporter-otlp-proto-grpc==1.38.0
+opentelemetry-instrumentation==0.59b0
+opentelemetry-instrumentation-asgi==0.59b0
+opentelemetry-instrumentation-fastapi==0.59b0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
+opentelemetry-util-http==0.59b0
+orjson==3.11.4
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.3
+passlib==1.7.4
+pathlib==1.0.1
+pillow==11.3.0
+playwright==1.55.0
+postgrest==2.24.0
+posthog==5.4.0
+proglog==0.1.12
+propcache==0.4.1
+protobuf==6.32.0
+prov==2.1.1
+pulsar-client==3.8.0
+puremagic==1.30
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.2
+pycparser==2.23
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydot==4.0.1
+pydub==0.25.1
+pyee==13.0.0
+Pygments==2.19.2
+PyJWT==2.10.1
+PyMuPDF==1.24.9
+PyMuPDFb==1.24.9
+pyparsing==3.2.5
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+python-multipart==0.0.20
+python-telegram-bot==20.8
+pytz==2025.2
+pyxnat==1.6.4
+PyYAML==6.0.2
+rdflib==7.4.0
+realtime==2.24.0
+referencing==0.37.0
+regex==2025.10.23
+requests==2.32.5
+requests-oauthlib==2.0.0
+rich==14.2.0
+rpds-py==0.28.0
+rsa==4.9.1
+schedule==1.2.2
+scipy==1.16.3
+shellingham==1.5.4
+simplejson==3.20.2
+six==1.17.0
+sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.8
+SQLAlchemy==2.0.43
+starlette==0.47.3
+storage3==2.24.0
+StrEnum==0.4.15
+supabase==2.24.0
+supabase-auth==2.24.0
+supabase-functions==2.24.0
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.12.0
+tokenizers==0.22.0
+tqdm==4.67.1
+traits==7.0.2
+typer==0.20.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.3.0
+uvicorn==0.35.0
+uvloop==0.22.1
+watchdog==6.0.0
+watchfiles==1.1.1
+webrtcvad==2.0.10
+websocket-client==1.9.0
+websockets==15.0.1
+wrapt==1.17.3
+yarl==1.22.0
+youtube-transcript-api==1.2.3
+zipp==3.23.0
